# lil_music

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GPT54_HIGH_WASAPI_TASK_RU.md  README.md  music_app_style_guide.md  soundcloud_desktop_prompt.md
cmake/: project_options.cmake
cmake/toolchains/: msvc_ninja_toolchain.cmake
scripts/: build_msvc.bat  configure_msvc.bat
src/: CMakeLists.txt
src/api/: CMakeLists.txt
src/api/include/soundcloud/api/: soundcloud_api_client.h  soundcloud_api_configuration.h  soundcloud_http_client.h  soundcloud_track_playback_reference.h  soundcloud_track_search_response_parser.h  soundcloud_transcoding_response_parser.h
src/api/src/: soundcloud_api_client.cpp  soundcloud_http_client.cpp  soundcloud_track_search_response_parser.cpp  soundcloud_transcoding_response_parser.cpp
src/app/: CMakeLists.txt
src/app/include/soundcloud/app/: desktop_application.h
src/app/src/: desktop_application.cpp  main.cpp
src/bridge/: CMakeLists.txt
src/bridge/include/soundcloud/bridge/: app_bridge.h  bridge_json_codec.h  i_ui_bridge.h
src/bridge/src/: app_bridge.cpp  bridge_json_codec.cpp
src/core/: CMakeLists.txt
src/core/include/soundcloud/core/domain/: audio_output_device.h  equalizer_band.h  equalizer_preset.h  equalizer_state.h  equalizer_status.h  playback_queue_state.h  playback_state.h  track.h  track_search_request.h
src/core/include/soundcloud/core/ports/: i_audio_player.h  i_equalizer_settings_repository.h  i_library_repository.h  i_track_catalog.h  i_track_stream_resolver.h
src/core/include/soundcloud/core/services/: playback_session.h
src/core/include/soundcloud/core/use_cases/: get_equalizer_state_use_case.h  get_playback_state_use_case.h  list_audio_output_devices_use_case.h  list_featured_tracks_use_case.h  pause_playback_use_case.h  play_track_use_case.h  reset_equalizer_use_case.h  resume_playback_use_case.h  search_tracks_use_case.h  seek_playback_use_case.h  select_audio_output_device_use_case.h  select_equalizer_preset_use_case.h  set_equalizer_band_gain_use_case.h  set_equalizer_enabled_use_case.h  set_equalizer_output_gain_use_case.h  set_playback_volume_use_case.h  toggle_favorite_use_case.h
src/core/src/: get_equalizer_state_use_case.cpp  get_playback_state_use_case.cpp  list_audio_output_devices_use_case.cpp  list_featured_tracks_use_case.cpp  pause_playback_use_case.cpp  play_track_use_case.cpp  playback_session.cpp  reset_equalizer_use_case.cpp  resume_playback_use_case.cpp  search_tracks_use_case.cpp  seek_playback_use_case.cpp  select_audio_output_device_use_case.cpp  select_equalizer_preset_use_case.cpp  set_equalizer_band_gain_use_case.cpp  set_equalizer_enabled_use_case.cpp  set_equalizer_output_gain_use_case.cpp  set_playback_volume_use_case.cpp  toggle_favorite_use_case.cpp
src/database/: CMakeLists.txt
src/database/include/soundcloud/database/: sqlite_equalizer_settings_repository.h  sqlite_library_repository.h
src/database/src/: sqlite_equalizer_settings_repository.cpp  sqlite_library_repository.cpp
src/platform/: CMakeLists.txt
src/platform/include/soundcloud/platform/: application_paths.h  window_configuration.h  window_controller.h
src/platform/src/: application_paths_resolver.cpp  window_controller.cpp
src/player/: CMakeLists.txt
src/player/include/soundcloud/player/: audio_player_service.h
src/player/src/: audio_player_service.cpp  media_engine_audio_backend.cpp  media_engine_audio_backend.h  media_foundation_audio_backend.cpp  media_foundation_audio_backend.h  windows_streaming_audio_backend.cpp  windows_streaming_audio_backend.h
src/player/src/dsp/: biquad_filter.cpp  biquad_filter.h  equalizer_chain.cpp  equalizer_chain.h  equalizer_presets.cpp  output_headroom_controller.cpp  output_headroom_controller.h  parameter_smoother.cpp  parameter_smoother.h
src/ui/: app.js  index.html  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
src/ui/src/: main.tsx
src/ui/src/app/: App.module.scss  App.tsx  defaultState.ts  useLilMusicApp.ts
src/ui/src/bridge/: nativeBridge.ts
src/ui/src/components/equalizer/: EqualizerPanel.module.scss  EqualizerPanel.tsx  EqualizerSlider.module.scss  EqualizerSlider.tsx
src/ui/src/components/layout/: TabsNav.module.scss  TabsNav.tsx  TopBar.module.scss  TopBar.tsx
src/ui/src/components/player/: OutputDeviceControl.module.scss  OutputDeviceControl.tsx  PlayerShell.module.scss  PlayerShell.tsx  ProgressBar.module.scss  ProgressBar.tsx  VolumeControl.module.scss  VolumeControl.tsx
src/ui/src/components/queue/: QueueList.module.scss  QueueList.tsx
src/ui/src/components/tabs/: EqualizerTab.tsx  HomeTab.tsx  QueueTab.tsx  SearchTab.tsx  TabSections.module.scss
src/ui/src/components/tracks/: TrackList.module.scss  TrackList.tsx  TrackRow.module.scss  TrackRow.tsx
src/ui/src/styles/: _tokens.scss  globals.scss
src/ui/src/types/: models.ts  window.d.ts
src/ui/src/utils/: formatters.ts  math.ts
